@@ -103,32 +103,37 @@ void window_tooltip_show(const OpenRCT2String& message, ScreenCoordsXY screenCoo
  */
 void window_tooltip_open(rct_window* widgetWindow, rct_widgetindex widgetIndex, const ScreenCoordsXY& screenCords)
 {
-    rct_widget* widget;
-
     if (widgetWindow == nullptr || widgetIndex == -1)
         return;
 
-    widget = &widgetWindow->widgets[widgetIndex];
+    auto widget = &widgetWindow->widgets[widgetIndex];
     window_event_invalidate_call(widgetWindow);
 
-    rct_string_id stringId = widget->tooltip;
-
-    if (stringId == STR_NONE)
-        return;
-
-    gTooltipWidget.window_classification = widgetWindow->classification;
-    gTooltipWidget.window_number = widgetWindow->number;
-    gTooltipWidget.widget_index = widgetIndex;
-    auto result = window_event_tooltip_call(widgetWindow, widgetIndex, stringId);
-    if (result.str == STR_NONE)
-        return;
-
+    OpenRCT2String result;
     if (widget->flags & WIDGET_FLAGS::TOOLTIP_IS_STRING)
     {
         result.str = STR_STRING_TOOLTIP;
         result.args = Formatter();
         result.args.Add<const char*>(widget->sztooltip);
+
+        gTooltipWidget.window_classification = widgetWindow->classification;
+        gTooltipWidget.window_number = widgetWindow->number;
+        gTooltipWidget.widget_index = widgetIndex;
     }
+    else
+    {
+        auto stringId = widget->tooltip;
+        if (stringId == STR_NONE)
+            return;
+
+        gTooltipWidget.window_classification = widgetWindow->classification;
+        gTooltipWidget.window_number = widgetWindow->number;
+        gTooltipWidget.widget_index = widgetIndex;
+        result = window_event_tooltip_call(widgetWindow, widgetIndex, stringId);
+        if (result.str == STR_NONE)
+            return;
+    }
+
     window_tooltip_show(result, screenCords);
 }
 
